--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image:height" content="512"/>
   <meta property="og:description" content="Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат наших клиентов в маркетинге, продажах и управлении"/>
   <meta property="og:site_name" content="DiGi agency"/>
-  <title>МЫСЛИ ГЛОБАЛЬНО</title>
+  <title>ДУМАЙ ГЛОБАЛЬНО</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
