--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="main-content" >
                     <div class=" owl-carousel owl-carousel-1">
                         <div class="content-position">
-                            <h1 class="title">мысли глобально</h1>
+                            <h1 class="title">думай глобально</h1>
                             <p class="header-content">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат 
                                 наших клиентов в маркетинге, продажах и управлении</p>
                             <div  style="padding-top:10px;">
