--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
                     <div class=" owl-carousel owl-carousel-1">
                         <div class="content-position">
                             <h1 class="title">думай глобально</h1>
-                            <p class="header-content">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат 
-                                наших клиентов в маркетинге, продажах и управлении</p>
+                            <p class="header-content">Di Gі - це діджитал агентство повного циклу, спрямоване на найкращий результат 
+                                наших клієнтів у маркетингу, продажах та управлінні</p>
                             <div  style="padding-top:10px;">
-                                <button class="button-readmore">подробнее</button>
+                                <button class="button-readmore">детальніше</button>
                             </div>
                         </div>
                         <div class="content-position">
                             <h1 class="title">реклама</h1>
-                            <p class="header-content">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат 
-                                наших клиентов в маркетинге, продажах и управлении</p>
+                            <p class="header-content">Di Gі - це діджитал агентство повного циклу, спрямоване на найкращий результат 
+                                наших клієнтів у маркетингу, продажах та управлінні</p>
                             <div  style="padding-top:10px;">
-                                <button class="button-readmore">подробнее</button>
+                                <button class="button-readmore">детальніше</button>
                             </div>
                         </div>
                         <div class="content-position">
                             <h1 class="title">заголовок</h1>
-                            <p class="header-content">Di Gі - это диджитал агентство полного цикла, направленное на самый лучший результат 
-                                наших клиентов в маркетинге, продажах и управлении</p>
+                            <p class="header-content">Di Gі - це діджитал агентство повного циклу, спрямоване на найкращий результат 
+                                наших клієнтів у маркетингу, продажах та управлінні</p>
                             <div style="padding-top:10px;">
-                                <button class="button-readmore">подробнее</button>
+                                <button class="button-readmore">детальніше</button>
                             </div>
                         </div>
                     </div>
@@ -88,12 +88,12 @@
             </section>
             <section class="footer">
                 <div class="footer-atributs">
-                    <h2 class="footer-header">Вы полюбите нас с первой встречи!</h2>
-                    <p class="footer-text">Мы предоставляем комплексный подход к продвижению компании, 
- продуктов и услуг в цифровой сфере.</p>
+                    <h2 class="footer-header">Ви полюбите нас із першої зустрічі!</h2>
+                    <p class="footer-text">Ми надаємо комплексний підхід до просування компанії, 
+ продуктів та послуг у цифровій сфері.</p>
                 </div>
                 <div>
-                    <button class="button-callme">перезвоните мне</button>
+                    <button class="button-callme">передзвоніть мені</button>
                 </div>               
             </section>
 <!--SECOND PAGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->            
