--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
         </div>
         <div class="block-service">
             <div class="service-description">
-                <h2 class="servise-title">Cервис</h2>
+                <h2 class="servise-title">Cервіс</h2>
                 <div class="stick"></div>
-                <h6 class="description">От идеи до незабываемого и
-измеримого результата.</h6>
-                <p class="text-service">Интеграция безупречного производства, передовых технологий и тщательного измерения производительности</p>
+                <h6 class="description">Від ідеї до незабутнього результату.</h6>
+                <p class="text-service">Інтеграція бездоганного виробництва, передових технологій та ретельного вимірювання продуктивності</p>
             </div>
             <div class="service-icons">
                 <div class="service-item">
@@ -112,9 +111,9 @@
                         <div class="service-item-image">
                             <img class="service-item-image-mask-1" src="images/service-icon-background.png" alt="icon-1">
                         </div>
-                        <p class="service-item-title">стратегия</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-title">стратегія</p>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -122,9 +121,9 @@
                         <div class="service-item-image">
                             <img class="service-item-image-mask-2" src="images/service-icon-background.png" alt="icon-2">
                         </div>
-                        <p class="service-item-title">анализ</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-title">аналіз</p>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -132,9 +131,9 @@
                         <div class="service-item-image">
                             <img class="service-item-image-mask-3" src="images/service-icon-background.png" alt="icon-3">
                         </div>
-                        <p class="service-item-title">соц сети</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-title">соц мережі</p>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -142,9 +141,9 @@
                         <div class="service-item-image">
                             <img class="service-item-image-mask-4" src="images/service-icon-background.png" alt="icon-4">
                         </div>
-                        <p class="service-item-title">развитие</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-title">розвиток</p>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -153,8 +152,8 @@
                             <img class="service-item-image-mask-5" src="images/service-icon-background.png" alt="icon-5">
                         </div>
                         <p class="service-item-title">контент</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -163,8 +162,8 @@
                             <img class="service-item-image-mask-6" src="images/service-icon-background.png" alt="icon-6">
                         </div>
                         <p class="service-item-title">дизайн ux</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -172,9 +171,9 @@
                         <div class="service-item-image">
                             <img class="service-item-image-mask-7" src="images/service-icon-background.png" alt="icon-7">
                         </div>
-                        <p class="service-item-title">таргетированная реклама</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-title">таргетована реклама</p>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="service-item">
@@ -183,8 +182,8 @@
                             <img class="service-item-image-mask-8" src="images/service-icon-background.png" alt="icon-8">
                         </div>
                         <p class="service-item-title">продукт</p>
-                        <p class="service-item-text">Создадим уникальный и удобный дизайн.</p>
-                        <a class="service-item-ditails" href="#" >подробнее →</a>
+                        <p class="service-item-text">Створимо унікальний та зручний дизайнн.</p>
+                        <a class="service-item-ditails" href="#" >детальніше →</a>
                     </div>
                 </div>
                 <div class="clear"></div>
@@ -193,7 +192,7 @@
 <!--THIRD GAGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
         <div class="our-projects">
             <div class="our-projects-header">
-                <h1 class="our-projects-title">Наши Проекты</h1>
+                <h1 class="our-projects-title">Наші Проекти</h1>
                 <div class="stick"></div>
             </div>
             <div class="our-projects-content">
@@ -212,7 +211,7 @@
                                 </span>
                             </button>
                         </div>
-                        <a  href="#" class="our-projects-content-text">Lalique бутик</a>
+                        <a  href="#" class="our-projects-content-text">Lalique бутік</a>
                     </div>
                 </div>
                 <div class="our-projects-item">
@@ -230,7 +229,7 @@
                                 </span>
                             </button>
                         </div>
-                        <a href="#" class="our-projects-content-text">Строительство домов</a>
+                        <a href="#" class="our-projects-content-text">Будівництво будинків</a>
                     </div>
                 </div>
                 <div class="our-projects-item">
@@ -248,7 +247,7 @@
                                     </span>
                                 </button>
                         </div>
-                        <a href="#" class="our-projects-content-text">Кофейня</a>
+                        <a href="#" class="our-projects-content-text">Кав'ярня</a>
                     </div>
                 </div>
                 <div class="our-projects-item">
@@ -266,7 +265,7 @@
                                     </span>
                                 </button>
                         </div>
-                        <a href="#" class="our-projects-content-text">Уникальные туры</a>
+                        <a href="#" class="our-projects-content-text">Унікальні тури</a>
                     </div>
                 </div>
                 <div class="clear"></div>
