--- a/index.html
+++ b/index.html
@@ -281,31 +281,28 @@
             <div class="our-team-text">
                 <h1 class="our-team-header">Команда</h1>
                 <div class="stick"></div>
-                <p class="our-team-content-text">Наша команда - это наша самая большая ценность. 
-                Мы трудились, чтобы собрать группу  экспертов,
-                 чьи навыки дополняют друг друга. 
-                У членов нашей команды разные истории, но мы разделяем общую 
-                страсть к идеалу. Мы верим, чтобы оставаться
-                профессионалом, нужно развиваться, 
-                поэтому мы постоянно ищем способы, как стать лучше 
-                в том, что мы делаем.
+                <p class="our-team-content-text">Наша команда — наша найбільша цінність.Ми наполегливо працювали, 
+                  щоб зібрати групу експертів, чиї навички доповнюють одне одного.
+                  Хоч у кожного з нас свій шлях, ми розділяємо спільну пристрасть до досконалості. 
+                  Ми віримо, що для того, щоб залишатися професіоналом, потрібно постійно розвиватися, 
+                  тому ми завжди шукаємо способи стати кращими в тому, що робимо.
                 </p>
                 <div class="our-team-button">
-                     <button class="our-team-button-content">смотреть видео</button>
+                     <button class="our-team-button-content">дивитися відео</button>
                 </div>
             </div>
         </div>
 <!--5TH PAGE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
         <div class="last-news">
             <div class="last-news-header">
-                <h4>Последние Новости</h4>
+                <h4>Останні новини</h4>
                 <div class="stick"></div>                
             </div>
             <div class="last-news-items">
                 <div class="last-news-item">
                     <img src="images/last-news-item-1.png" alt="last-news=item-1">                
                     <div class="last-news-item-title">
-                        <span>3Д в брендинге</span>
+                        <span>3Д у брендингу</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -315,7 +312,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-2.png" alt="last-news=item-2">
                     <div class="last-news-item-title">
-                        <span>Контекстная реклама</span>
+                        <span>Контекстна реклама</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -325,7 +322,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-3.png" alt="last-news=item-3">
                     <div class="last-news-item-title">
-                        <span>Графика</span>
+                        <span>Графіка</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -335,7 +332,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-4.png" alt="last-news=item-4">
                     <div class="last-news-item-title">
-                        <span>Корпоративная культура</span>
+                        <span>Корпоративна культура</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -345,7 +342,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-5.png" alt="last-news=item-5">
                     <div class="last-news-item-title">
-                        <span>Уникальный дизайн</span>
+                        <span>Унікальний дизайн</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -355,7 +352,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-6.png" alt="last-news=item-6">
                     <div class="last-news-item-title">
-                        <span>Взгляд со стороны</span>
+                        <span>Погляд із боку</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -365,7 +362,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-7.png" alt="last-news=item-7">
                     <div class="last-news-item-title">
-                        <span>Соц сети и их польза</span>
+                        <span>Соціальні мережі та їх користь</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -375,7 +372,7 @@
                 <div class="last-news-item">
                     <img src="images/last-news-item-8.png" alt="last-news=item-8">
                     <div class="last-news-item-title">
-                        <span>Эксклюзивность</span>
+                        <span>Ексклюзивність</span>
                     </div>
                     <div class="last-news-border-hover"></div>
                     <button class="last-news-icon-little">
@@ -388,9 +385,9 @@
    <div class="page-quote">
        <div class="owl-carousel owl-carousel-2">
             <blockquote class="quote">    
-                <p>Если нужно создавать либо повышать имидж компании,</p>
-                <p>то <span>диджитал-маркетинг</span> является наиболее подходящим</p>
-                <cite>- Маргарита Акулич</cite>
+                <p>Якщо необхідно створювати чи підвищувати стиль компанії,</p>
+                <p>то <span>діджитал-маркетинг</span> є найбільш підходящим</p>
+                <cite>- Маргарита Акуліч</cite>
             </blockquote>
             <blockquote class="quote">    
                <p>тут могла бути ваша <span>реклама</span></p>
@@ -411,8 +408,8 @@
     </div>  
     <div class="about-us-content">
         <div class="about-us-message">
-            <p>Мы хотели бы услышать все о вашем проекте.</p>
-            <p>Свяжись с нами.</p>
+            <p>Ми хотіли б почути все про ваш проект.</p>
+            <p>Зв'яжіться з нами.</p>
         </div>
         <div class="about-us-table">
             <div class="about-us-table-icon">
@@ -447,17 +444,17 @@
             <div class="about-us-info-widgets">
                 <p>адрес</p> 
                 <p>Пр. Науки 107</p>
-                <p>Kиев / Украина</p>
+                <p>Київ / Україна</p>
             </div>
             <div class="about-us-info-widgets">
-                <p>помощь</p> 
-                <p><a href="#">Как с нами связаться?</a></p>
-                <p><a href="#">Что такое диджитал?</a></p>
-                <p><a href="#">Стоимость услуг</a></p>
+                <p>допомога</p> 
+                <p><a href="#">Як зв'язатися з нами?</a></p>
+                <p><a href="#">Що таке діджітал?</a></p>
+                <p><a href="#">Вартість послуг</a></p>
             </div>
             <div class="about-us-info-widgets">
                 <p>меню</p> 
-                <p><a href="#">Наши проекты</a></p>
+                <p><a href="#">Наші проекти</a></p>
                 <p><a href="#">Команда</a></p>
                 <p><a href="#">Блог</a></p>
             </div>
@@ -465,7 +462,7 @@
     </div>    
     <div class="about-us-footer">
         <a href="#" >
-            <span>вверх</span>
+            <span>верх</span>
         <div class="rectangle"></div>
         </a>
         
